test 4 - readme github

--- a/03 - Getting Cleaning Data/Getting_and_Cleaning_Data_Project/README.rmd
+++ b/03 - Getting Cleaning Data/Getting_and_Cleaning_Data_Project/README.rmd
@@ -1,11 +1,15 @@
 ---
-title: "README"
-output: html_notebook
+title: "README - Getting and Cleaning Data - Course Project"
+author: "Denis Lopes"
+output: 
+  html_notebook:
+  keep_md: TRUE
 ---
 
-# README - Getting and Cleaning Data - Course Project 
+teste
+output: html_notebook
 
-Author: Denis Lopes
+
 
 
 ### Goal of The Project
