teste 5 readme github

--- a/03 - Getting Cleaning Data/Getting_and_Cleaning_Data_Project/README.rmd
+++ b/03 - Getting Cleaning Data/Getting_and_Cleaning_Data_Project/README.rmd
@@ -2,8 +2,7 @@
 title: "README - Getting and Cleaning Data - Course Project"
 author: "Denis Lopes"
 output: 
-  html_notebook:
-  keep_md: TRUE
+  rmarkdown::github_document
 ---
 
 teste
