--- a/03 - Getting Cleaning Data/Getting_and_Cleaning_Data_Project/CodeBook.rmd
+++ b/03 - Getting Cleaning Data/Getting_and_Cleaning_Data_Project/CodeBook.rmd
@@ -1,15 +1,12 @@
 ---
-title: "README - Getting and Cleaning Data - Course Project"
-author: "Denis Lopes"
+
 output: 
-    rmarkdown::github_document
-      
+  rmarkdown::github_document
 ---
 
-teste
-output: html_notebook
+# CodeBook - Getting and Cleaning Data - Course Project 
 
-
+Author: Denis Lopes
 
 
 ### Goal of The Project
@@ -77,4 +74,9 @@ You should create one R script called run_analysis.R that does the following.
 4. Appropriately labels the data set with descriptive variable names.
 5. From the data set in step 4, creates a second, independent tidy data 
 set with the average of each variable for each activity and each subject.
+
+
 \
+\
+\
+
